@@ -40,6 +40,10 @@
  * [Disable-IEEnhancedSecurityConfiguration](http://get-carbon.org/help/Disable-IEEnhancedSecurityConfiguration.html) now writes messages with `Write-Verbose` instead of `Write-Host`.
  * [Enable-IEActivationPermission](http://get-carbon.org/help/Enable-IEActivationPermission.html) now writes messages with `Write-Verbose` instead of `Write-Host`.
 
+### MSI
+
+ * [Invoke-WindowsInstaller](http://get-carbon.org/help/Invoke-WindowsInstaller.html) no longer writes messages with `Write-Host`. Improved error message if installation fails.
+
 ## Bug Fixes
 
 ### General
